--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -7,10 +7,14 @@
     margin-bottom: 4rem;
     display :grid ;
     grid-template-columns: 50% 1fr;
+    align-items: end;
+}
+.bottom-container{
+    display: flex;
+    flex-direction: column;
 }
 
 .dev-lottie {
-    /* margin-top: 2rem; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -113,18 +117,14 @@ h1 span {
 }
 
 .contact-button {
-    display: block;
+    flex-grow: 1;
     padding: 0.7rem 1.2rem;
-    margin: 2rem 3rem ;
-    width: 70%;
     border: 1.5px solid  var(--color-primary);
     text-align: center;
     font-size: 1.2rem;
-    border-radius: 0.8rem;
+    border-radius: 10px;
     color: var(--color-primary);
     font-weight: bold;
-    box-shadow: 10px 10px 20px rgba(0,0,0,0.5);
-    transition: var(--transition);
 }
 
 .contact-button:hover{
@@ -165,6 +165,7 @@ h1 span {
     .home-container {
         position: relative;
         display: block;
+        padding: 10px;
     }
     
     
@@ -175,51 +176,4 @@ h1 span {
         opacity: 0.07;
         z-index: 3;
     }
-
-    .contact-button{
-        width: 85%;
-        margin: 2rem auto;
-    }
-}
-
-@media screen and (max-width : 480px ) {
-    .ourstyle-article{
-        width: 130px;
-        margin: 0;
-    }
-    
-    .ourstyle-icon{
-        font-size: 1.5rem;
-    }
-
-    
-    .ourstyle-article h5 {
-        font-size: 0.8rem;
-    }
-    
-    .handle-our-style {
-        display: grid;
-        grid-template-columns: auto auto;
-        justify-items: center;
-        align-items: stretch;
-        row-gap: 2rem;
-        column-gap: 2rem;
-    }
-    
-    .type-writer-container h2 {
-        font-size: 1.2rem;
-    }
-    
-    .type-writer-container h2 span {
-        font-size: 1.25rem;
-    }
-
-    .type-writer-container .static-text {
-        font-size: 1.25rem;
-        margin-left: 0.3rem;
-    }
-
-     
-
-
 }
