--- a/src/components/contacts/contacts.css
+++ b/src/components/contacts/contacts.css
@@ -61,7 +61,7 @@ textarea {
     font-size: 1rem;
     line-height: 1.4;
     font-weight: 500;
-    background-color: #f1e8d7;
+    background-color: #303A57;
 }
 
 textarea {
