--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import 'material-icons/iconfont/material-icons.css';
 
 *{
     margin : 0 ;
@@ -47,7 +48,7 @@ h2{
     font-size: 2.5rem;
 }
 
-.fr {
+.fr{
     display: flex;
     flex-wrap: wrap row;
 }
